--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -1,7 +1,40 @@
-<h1>Hola este es mi primer proyecto</h1>
+<div class="container">
+  <h1>Hola este es mi primer proyecto</h1>
 <h2>{{ welcome }}</h2>
 <ul>
-  <li *ngFor="let task of tasks">
+  <li *ngFor="let task of tasks()">
     {{ task }}
   </li>
 </ul>
+<hr />
+<h2>{{ 'Hola'.repeat(4) }}</h2>
+<p> la suma es de 3 + 3 es {{ 3 + 3 }}</p>
+<p>Hola soy {{ name() }} y mi edad es {{ age }}</p>
+<hr />
+<img [src]="person.avatar" alt="">
+<input type="number" [value]="person.age">
+<button [disabled]="disabled">Click me</button>
+<p>person: {{ person.name }}</p>
+<hr />
+<button (click)="clickHandler()">click me</button>
+<button (dblclick)="clickHandler()">double me</button>
+<p>(change)</p>
+<input type="number" [value]="person.age" (change)="changeHandler($event)">
+<p>(change)</p>
+<input type="text" [value]="person.name" (change)="changeHandler($event)">
+<p>(keydown)</p>
+<input type="text" [value]="person.name" (keydown)="keydownHandler($event)">
+<p>(keydown shift)</p>
+<input type="text" [value]="person.name" (keydown.shift.t)="clickHandler()">
+<hr />
+<ul>
+  <p>total: {{ tasks().length }}</p>
+  <li *ngFor="let task of tasks(); index as i">
+    {{ i }} {{ task }}
+  </li>
+</ul>
+<hr />
+<h1>Signals</h1>
+<input type="text" [value]="name()" (change)="changeHandler($event)">
+<p>name: {{ name() }}</p>
+</div>
