--- a/todoapp/src/app/pages/home/home.component.html
+++ b/todoapp/src/app/pages/home/home.component.html
@@ -8,21 +8,25 @@
           placeholder="Type new todo"
           autofocus
           type="text"
-          (change)="changeHandler($event)"
+          [formControl]="newTaskCtrl"
+          (keydown.enter)="changeHandler()"
         />
       </div>
     </header>
-
     <div class="container todoapp-wrapper">
       <section class="main">
         <ul class="todo-list">
-            <li *ngFor="let task of tasks(); index as i">
+            <li 
+            (dblclick)="updateTaskEditingMode(i)" 
+            *ngFor="let task of taskByFilter(); index as i"
+            [class.editing]="task.editing"
+            [class.completed]="task.completed">
                 <div class="view">
-                    <input class="toggle" type="checkbox">
+                    <input class="toggle" type="checkbox" [checked]="task.completed" (change)="updateTask(i)"/>
                     <label>{{ task.title }}</label>
                     <button class="destroy" (click)="deleteTask(i)"></button>
                 </div>
-                <input class="edit" value="Buy a unicorn">
+                <input class="edit" (keydown.enter)="updateTaskText(i, $event)" [value]="task.title" />
             </li>
             
             <!--
@@ -57,18 +61,23 @@
       </section>
 
       <footer class="footer">
-        <span class="todo-count"><strong>0</strong> item left </span>
+        <span class="todo-count">
+          <strong>{{ tasks().length }}</strong>
+          <span *ngIf="tasks().length === 1; else elseBlock"> item
+          </span>
+          <ng-template #elseBlock> items</ng-template>
+        </span>
 
         <ul class="filters">
           <li>
-            <a routerLink="/" class="selected" >All</a>
+            <a (click)="changeFilter('all')" class="selected" >All</a>
           </li>
           <li>
-            <a routerLink="/pending" >Pending</a>
+            <a (click)="changeFilter('pending')" >Pending</a>
           </li>
 
           <li>
-            <a routerLink="/completed" >Completed</a>
+            <a (click)="changeFilter('completed')" >Completed</a>
           </li>
         </ul>
         <button class="clear-completed">Clear completed</button>
