--- a/todoapp/src/app/pages/labs/labs.component.css
+++ b/todoapp/src/app/pages/labs/labs.component.css
@@ -1,3 +1,19 @@
 .container{
     padding: 3rem;
 }
+
+.box{
+    height:  10px;
+    display: block;
+    background-color: aquamarine;
+}
+
+.message-error {
+    background-color: orange;
+    color: white;
+    opacity: 0;
+    transition: all linear .5s;
+}
+.message-error.show {
+    opacity: 1;
+}
