--- a/todoapp/src/app/pages/labs/labs.component.html
+++ b/todoapp/src/app/pages/labs/labs.component.html
@@ -11,21 +11,21 @@
 <p> la suma es de 3 + 3 es {{ 3 + 3 }}</p>
 <p>Hola soy {{ name() }} y mi edad es {{ age }}</p>
 <hr />
-<img [src]="person.avatar" alt="">
-<input type="number" [value]="person.age">
+<img [src]="person().avatar" alt="">
+<input type="number" [value]="person().age">
 <button [disabled]="disabled">Click me</button>
-<p>person: {{ person.name }}</p>
+<p>person: {{ person().name }}</p>
 <hr />
 <button (click)="clickHandler()">click me</button>
 <button (dblclick)="clickHandler()">double me</button>
 <p>(change)</p>
-<input type="number" [value]="person.age" (change)="changeHandler($event)">
+<input type="number" [value]="person().age" (change)="changeHandler($event)">
 <p>(change)</p>
-<input type="text" [value]="person.name" (change)="changeHandler($event)">
+<input type="text" [value]="person().name" (change)="changeHandler($event)">
 <p>(keydown)</p>
-<input type="text" [value]="person.name" (keydown)="keydownHandler($event)">
+<input type="text" [value]="person().name" (keydown)="keydownHandler($event)">
 <p>(keydown shift)</p>
-<input type="text" [value]="person.name" (keydown.shift.t)="clickHandler()">
+<input type="text" [value]="person().name" (keydown.shift.t)="clickHandler()">
 <hr />
 <ul>
   <p>total: {{ tasks().length }}</p>
@@ -37,4 +37,53 @@
 <h1>Signals</h1>
 <input type="text" [value]="name()" (change)="changeHandler($event)">
 <p>name: {{ name() }}</p>
+<hr />
+<ul>
+  <p>total: {{ tasks().length }}</p>
+  <li *ngFor="let task of tasks(); index as i">
+    {{ i }} {{ task }}
+  </li>
+</ul>
+<hr />
+<div *ngIf="1 !== 1">
+  My contend
+</div>
+<div *ngIf="name() === 'Jorge'">
+  Soy Jorge xd
+</div>
+<input type="number" [value]="person().age" (change)="changeAge($event)">
+<div *ngIf="person().name === 'Jorge' && +person().age > 18; else miBloque">
+  Soy Jorge xd y soy mayor de 18
+</div>
+<ng-template #miBloque>
+  Soy Jorge y soy menor de 18
+</ng-template>
+<hr />
+<input type="text" [value]="person().name" (change)="changeName($event)">
+<div [ngSwitch]="person().name">
+  <p *ngSwitchCase="'Jorge'"> Yo soy Jorge</p>
+  <p *ngSwitchCase="'Abigail'"> Yo soy Abigail</p>
+  <p *ngSwitchCase="'Karolaine'"> Yo soy Karolaine</p>
+  <p *ngSwitchCase="'Ethan'"> Yo soy Ethan</p>
+  <p *ngSwitchDefault> Yo no soy nadie</p>
+</div>
+<hr />
+<input type="color" [formControl]="colorCtrl">
+<p>color: {{ colorCtrl.value }}</p>
+<svg>
+  <g>
+    <rect x="0" y="0" height="100" width="100" [attr.fill]="colorCtrl.value"/>
+  </g>
+</svg>
+<hr />
+<input type="number" [formControl]="widthCtrl">
+<span class="box" [style.width.px]="widthCtrl.value"></span>
+<hr />
+<p>
+  <input type="text" [formControl]="nameCtrl"> <br />
+  <span class="message-error" [class.show]="nameCtrl.invalid && nameCtrl.touched">Nombre invalido</span>
+</p>
+<p>
+  <input type="text">
+</p>
 </div>
