--- a/todoapp/src/app/pages/home/home.component.html
+++ b/todoapp/src/app/pages/home/home.component.html
@@ -60,24 +60,24 @@
         </ul>
       </section>
 
-      <footer class="footer">
+      <footer class="footer" *ngIf="taskByFilter().length > 0">
         <span class="todo-count">
-          <strong>{{ tasks().length }}</strong>
-          <span *ngIf="tasks().length === 1; else elseBlock"> item
+          <strong>{{ taskByFilter().length }}</strong>
+          <span *ngIf="taskByFilter().length === 1; else elseBlock"> item
           </span>
           <ng-template #elseBlock> items</ng-template>
         </span>
 
         <ul class="filters">
           <li>
-            <a (click)="changeFilter('all')" class="selected" >All</a>
+            <a (click)="changeFilter('all')" [class.selected]="filter() === 'all'" >All</a>
           </li>
           <li>
-            <a (click)="changeFilter('pending')" >Pending</a>
+            <a (click)="changeFilter('pending')" [class.selected]="filter() === 'pending'" >Pending</a>
           </li>
 
           <li>
-            <a (click)="changeFilter('completed')" >Completed</a>
+            <a (click)="changeFilter('completed')" [class.selected]="filter() === 'completed'">Completed</a>
           </li>
         </ul>
         <button class="clear-completed">Clear completed</button>
